Working with flex, fixing project image not fitting in project div.

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -12,20 +12,6 @@
   }
 }
 
-@media screen and (min-width: 1400px) {
-  #profile {
-    height: 83vh;
-    margin-bottom: 6rem;
-  }
-  .about-containers {
-    flex-wrap: wrap;
-  }
-  #contact,
-  #projects {
-    height: fit-content;
-  }
-}
-
 @media screen and (max-width: 1200px) {
   #desktop-nav {
     display: none;
